--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "firebase": "^10.7.2",
     "html-react-parser": "^5.1.1",
     "lucide-react": "^0.314.0",
-    "next": "14.1.0",
+    "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
